--- a/HotelSystem.Web/Views/HotelHome/Boardroom.cshtml
+++ b/HotelSystem.Web/Views/HotelHome/Boardroom.cshtml
@@ -3,9 +3,18 @@
     ViewBag.Title = "会议室";
     Layout = "~/Views/Shared/_LayoutHotel.cshtml";
 }
+<link href='~/Scripts/ico/icon.css' rel='stylesheet' type='text/css' />
 <style>
     body{
         background: #f5f5f5;
+    }
+    .icon span, .icon i {
+        /*line-height:30px;*/
+        /*float:left;*/
+        vertical-align: middle;
+    }
+    .icon span {
+        margin-left:6px;
     }
     /*客房列表*/
     .room-box {
@@ -161,12 +170,12 @@
                     <div class="item-box">
                         <div class="row">
                             <div class="item-row">
-                                <span class="col-lg-2 col-md-2 col-sm-12"> 通用项目： </span>
-                                <div class="col-lg-10 col-md-10">
+                                <span class="col-md-2"> 通用项目： </span>
+                                <div class="col-md-10 icon">
 
                                     @foreach (var p in ViewBag.Policy0)
                                     {
-                                        <img style="height:30px;" src="@p.Icon" alt="..."> @p.Name
+                                        <i class="sprite @p.Icon"></i><span>@p.Name</span>
                                     }
                                 </div>
                             </div>
@@ -174,12 +183,12 @@
 
                         <div class="row">
                             <div class="item-row">
-                                <span class="col-lg-2 col-md-2 col-sm-12"> 服务项目： </span>
-                                <div class="col-lg-10 col-md-10">
+                                <span class="col-md-2"> 服务项目： </span>
+                                <div class="col-md-10 icon">
 
                                     @foreach (var p in ViewBag.Policy1)
                                     {
-                                        <img style="height:30px;" src="@p.Icon" alt="..."> @p.Name
+                                        <i class="sprite @p.Icon"></i><span>@p.Name</span>
                                     }
                                 </div>
                             </div>
@@ -187,12 +196,12 @@
 
                         <div class="row">
                             <div class="item-row">
-                                <span class="col-lg-2 col-md-2 col-sm-12"> 客房设施： </span>
-                                <div class="col-lg-10 col-md-10">
+                                <span class="col-md-2"> 客房设施： </span>
+                                <div class="col-md-10 icon">
 
                                     @foreach (var p in ViewBag.Policy2)
                                     {
-                                        <img style="height:30px;" src="@p.Icon" alt="..."> @p.Name
+                                        <i class="sprite @p.Icon"></i><span>@p.Name</span>
                                     }
                                 </div>
                             </div>
