--- a/HotelSystem.Web/Views/Order/Apply.cshtml
+++ b/HotelSystem.Web/Views/Order/Apply.cshtml
@@ -326,12 +326,12 @@
                                 <div class="form-inline">
                                     @for (var i = 1; i <= ViewBag.RoomCount; i++)
                                     {
-                                        <div class="form-group col-md-6" style="margin-bottom:4px;">
+                                        <div class="form-group col-md-6" style="margin-bottom:4px;height:40px;">
                                             <label class="control-label" style="line-height:30px;">客房 @i :&nbsp;&nbsp;</label>
                                             <input type="text" name="surname" class="form-control" placeholder="姓" style="width:100px;">
                                             <input type="text" name="name" class="form-control" placeholder="名" style="width:200px;">
                                         </div>
-                                        <div class="form-group col-md-6 text-right" style="margin-bottom:4px;">
+                                        <div class="form-group col-md-6 text-right" style="margin-bottom:4px;height:40px;">
                                             <input type="text" name="surname" class="form-control" placeholder="姓" style="width:100px;">
                                             <input type="text" name="name" class="form-control" placeholder="名" style="width:200px;">
                                         </div>
