--- a/HotelSystem.Web/Areas/Hotel/Views/Info/Index.cshtml
+++ b/HotelSystem.Web/Areas/Hotel/Views/Info/Index.cshtml
@@ -108,7 +108,7 @@
                     <div class="form-group">
                         <label class="col-lg-2 col-md-2 col-sm-12 control-label"><font color="red">*</font> 酒店星级</label>
                         <div class="col-lg-1 col-md-10">
-                            <select name="Star" class="form-control" placeholder="必填">
+                            <select name="Star" class="form-control" placeholder="必填" disabled>
                                 <option value="6">超五星/奢华型</option>
                                 <option value="5">五星级/豪华型</option>
                                 <option value="4">四星级/高档型</option>
