--- a/HotelSystem.Web/Areas/Hotel/Views/Info/Policy.cshtml
+++ b/HotelSystem.Web/Areas/Hotel/Views/Info/Policy.cshtml
@@ -155,22 +155,22 @@
                                 }
                             }
                             <label class="checkbox-inline">
-                                <input type="checkbox" name="CreditCard" value="国内发行银联卡" @(ViewBag.Service.CreditCard.Contains("国内发行银联卡") ? "checked" : "")> 国内发行银联卡
+                                <input type="checkbox" name="CreditCard" value="银联卡" @(ViewBag.Service.CreditCard.Contains("银联卡") ? "checked" : "")> 银联卡
                             </label>
                             <label class="checkbox-inline">
-                                <input type="checkbox" name="CreditCard" value="境外发行信用卡--万事达（Master）" @(ViewBag.Service.CreditCard.Contains("境外发行信用卡--万事达（Master）") ? "checked" : "")> 境外发行信用卡--万事达（Master）
+                                <input type="checkbox" name="CreditCard" value="Master" @(ViewBag.Service.CreditCard.Contains("Master") ? "checked" : "")> Master
                             </label>
                             <label class="checkbox-inline">
-                                <input type="checkbox" name="CreditCard" value="境外发行信用卡--运通（AMEX）" @(ViewBag.Service.CreditCard.Contains("境外发行信用卡--运通（AMEX）") ? "checked" : "")> 境外发行信用卡--运通（AMEX）
+                                <input type="checkbox" name="CreditCard" value="运通（AMEX）" @(ViewBag.Service.CreditCard.Contains("运通（AMEX）") ? "checked" : "")>运通（AMEX）
                             </label>
                             <label class="checkbox-inline">
-                                <input type="checkbox" name="CreditCard" value="境外发行信用卡--JCB" @(ViewBag.Service.CreditCard.Contains("境外发行信用卡--JCB") ? "checked" : "")> 境外发行信用卡--JCB
+                                <input type="checkbox" name="CreditCard" value="JCB" @(ViewBag.Service.CreditCard.Contains("JCB") ? "checked" : "")> JCB
                             </label>
                             <label class="checkbox-inline">
-                                <input type="checkbox" name="CreditCard" value="境外发行信用卡--大来（Diners Club）" @(ViewBag.Service.CreditCard.Contains("境外发行信用卡--大来（Diners Club）") ? "checked" : "")> 境外发行信用卡--大来（Diners Club）
+                                <input type="checkbox" name="CreditCard" value="大来（Diners Club）" @(ViewBag.Service.CreditCard.Contains("大来（Diners Club）") ? "checked" : "")> 大来（Diners Club）
                             </label>
                             <label class="checkbox-inline">
-                                <input type="checkbox" name="CreditCard" value="境外发行信用卡--威士（VISA）" @(ViewBag.Service.CreditCard.Contains("境外发行信用卡--威士（VISA）") ? "checked" : "")> 境外发行信用卡--威士（VISA）
+                                <input type="checkbox" name="CreditCard" value="威士（VISA）" @(ViewBag.Service.CreditCard.Contains("威士（VISA）") ? "checked" : "")> 威士（VISA）
                             </label>
                         </div>
                     </div>
