--- a/HotelSystem.Web/Views/Article/Index.cshtml
+++ b/HotelSystem.Web/Views/Article/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model HotelSystem.Model.Article
 @{
-    ViewBag.Title = "Index";
+    //ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_LayoutCompany.cshtml";
 }
 
