--- a/HotelSystem.Web/Views/Home/_HotelPage.cshtml
+++ b/HotelSystem.Web/Views/Home/_HotelPage.cshtml
@@ -45,7 +45,7 @@
                         <div class="adress"><span class="fa fa-map-marker"></span> <a href="javascript:;">@h.hotelInfo.City.CityName @h.hotelInfo.District.DistrictName @h.hotelInfo.Adress</a>  </div>
                         <div class="popularity">
                             <span class="tag">人气</span>
-                            <span class="summary">最后的预定：6小时之前</span>
+                            <span class="summary">最新预定：6小时之前</span>
                         </div>
                         <div class="policy">
                             @foreach (var p in h.policy)
