--- a/HotelSystem.Web/Views/Shared/_LayoutUser.cshtml
+++ b/HotelSystem.Web/Views/Shared/_LayoutUser.cshtml
@@ -18,7 +18,7 @@
     <style>
         .personal-info {
             height: 280px;
-            background: url("/Images/user_bg.jpg") no-repeat;
+            background: url("/Images/userbg.jpg") no-repeat;
             background-size: cover;
             background-position: center;
             position: relative;
