--- a/HotelSystem.Web/Views/User/Info.cshtml
+++ b/HotelSystem.Web/Views/User/Info.cshtml
@@ -1,7 +1,7 @@
 ﻿@model HotelSystem.Model.GuestUser
 
 @{
-    ViewBag.Title = "Info";
+    ViewBag.Title = "个人中心-账户信息";
     Layout = "~/Views/Shared/_LayoutUser.cshtml";
 }
 
