--- a/HotelSystem.Web/Areas/Hotel/Views/Room/CreatePriceType.cshtml
+++ b/HotelSystem.Web/Areas/Hotel/Views/Room/CreatePriceType.cshtml
@@ -46,7 +46,7 @@
             </div>
         </div>
 
-        <div class="col-md-4 form-group">
+        @*<div class="col-md-4 form-group">
             @Html.LabelFor(model => model.ExtraBedPrice, htmlAttributes: new { @class = "control-label col-md-3" })
             <div class="col-md-9">
                 <div class="input-group">
@@ -56,15 +56,15 @@
 
                 @Html.ValidationMessageFor(model => model.ExtraBedPrice, "", new { @class = "text-danger" })
             </div>
-        </div>
+        </div>*@
 
-        <div class="col-md-4 form-group">
+        @*<div class="col-md-4 form-group">
             @Html.LabelFor(model => model.Number, htmlAttributes: new { @class = "control-label col-md-3" })
             <div class="col-md-9">
                 @Html.EditorFor(model => model.Number, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Number, "", new { @class = "text-danger" })
             </div>
-        </div>
+        </div>*@
 
         <div class="col-md-4 form-group">
             <div class="col-md-offset-2 col-md-9">
