--- a/HotelSystem.Web/Areas/Hotel/Views/User/Login.cshtml
+++ b/HotelSystem.Web/Areas/Hotel/Views/User/Login.cshtml
@@ -26,7 +26,7 @@
                     <div class="login-box">
 
                         <div class="header">
-                            酒店管理员后台登录
+                            LANTOLA酒店管理系统
                         </div>
                         @using (Html.BeginForm("Login", "User", FormMethod.Post))
                         {
