--- a/HotelSystem.Web/Views/HotelHome/Comment.cshtml
+++ b/HotelSystem.Web/Views/HotelHome/Comment.cshtml
@@ -58,6 +58,7 @@
                 .comment-container .item .content .body {
                     font-size: 14px;
                     line-height: 30px;
+                    max-height: 60px;
                     overflow: hidden;
                     position: relative;
                 }
@@ -180,6 +181,57 @@
             cursor: pointer;
             display: block;
         }
+
+    .light-box {
+        position: fixed;
+        top: 0px;
+        z-index: 11;
+        width: 100%;
+        height: 100%;
+        text-align: center;
+        background: rgba(0, 0, 0, 0.61);
+        display: none;
+        padding-top: 80px;
+        padding-bottom: 60px;
+    }
+
+        .light-box img {
+            max-height: 90%;
+            margin: 0px auto;
+        }
+
+    .album-close {
+        position: absolute;
+        display: block;
+        font-size: 40px;
+        cursor: pointer;
+        color: #fff;
+        right: 10px;
+        top: 10px;
+    }
+
+    .light-box .album-close {
+        right: 80px;
+        top: 70px;
+    }
+
+    .prev-img {
+        font-size: 120px;
+        color: #fff;
+        left: 5px;
+        top: 350px;
+        cursor: pointer;
+        position: absolute;
+    }
+
+    .next-img {
+        font-size: 120px;
+        color: #fff;
+        right: 5px;
+        top: 350px;
+        cursor: pointer;
+        position: absolute;
+    }
 </style>
 <div class="personal-info">
 </div>
@@ -203,4 +255,45 @@
 <div class="container" id="CollectionList">
     @Html.Partial("_CommentList", Model);
 </div>
+<div id="LightBox" class="light-box">
+    <img src="" id="preview" alt="..." data-id="">
+    @*<i class="fa fa-angle-left prev-img"></i>
+    <i class="fa fa-angle-right next-img"></i>*@
+    <span class="album-close"><i class="fa fa-times-circle-o"></i></span>
+</div>
+<script>
+    $('#CollectionList').on('click', '.more', function () {
+        if ($(this).text() == '收起') {
+            $(this).text('查看更多').parent().css('max-height', '60px');
+        }
+        else {
+            $(this).text('收起').parent().css('max-height', 'none');
+        }
+
+    });
+    $(".album-close").click(function () {
+        $(this).parent().hide();
+    });
+    $('#CollectionList').on('click', '.img-list img', function () {
+        $("#preview").attr("src", $(this).attr("src"));
+        $("#LightBox").show();
+    });
+    $("#LightBox").on('mousewheel DOMMouseScroll', 'img', function (e) {
+
+        var ev = window.event || e;//处理浏览器兼容性问题
+
+        var scrollUnit = Math.max(-1, Math.min(1, (ev.wheelDelta || -ev.detail)));
+
+        var newHeight = Math.max(100, Math.min(1600, parseInt($(this).css("height")) + (30 * scrollUnit))) + "px";
+
+        $(this).css("height", newHeight);
+    })
+    //$(".prev-img").click(function () {
+
+    //    $("#preview").attr("src", src);
+    //});
+    //$(".next-img").click(function () {
+    //    $("#preview").attr("src", src);
+    //});
+</script>
 @{Html.RegisterMvcPagerScriptResource();}
