--- a/HotelSystem.Web/Views/Order/Apply.cshtml
+++ b/HotelSystem.Web/Views/Order/Apply.cshtml
@@ -648,10 +648,17 @@
             "minDate": current.format('YYYY年MM月DD日'),
             locale: locale
         }, function (start, end, label) {
-            window.location = "/Order/Apply/" + $("#PriceTypeId").val() + "?HotelInfoId=" + $("#HotelInfoId").val()
-            + "&StartTime=" + start.format('YYYY-MM-DD')
-            + "&EndTime=" + end.format('YYYY-MM-DD')
-            + "&RoomCount=" + $("#RoomCount").val();
+            if (moment(start.format('YYYY-MM-DD')).isSame(end.format('YYYY-MM-DD'))) {
+                alert("日期间隔必须大于或等于1天");
+
+            }
+            else {
+                window.location = "/Order/Apply/" + $("#PriceTypeId").val() + "?HotelInfoId=" + $("#HotelInfoId").val()
+                   + "&StartTime=" + start.format('YYYY-MM-DD')
+                   + "&EndTime=" + end.format('YYYY-MM-DD')
+                   + "&RoomCount=" + $("#RoomCount").val();
+            }
+
             //showDefaultDate(this.element, start, end);
         });
         $('#invoiceTabs a[data-toggle="tab"]').on('shown.bs.tab', function (e) {
@@ -716,8 +723,7 @@
         //表单验证
         $('#order_form').submit(function () {
             var applyUser = $('#ApplyUser');
-            if (applyUser.val()=="")
-            {
+            if (applyUser.val() == "") {
                 applyUser.focus();
                 return false;
             }
